# ChusmeatorLite

./: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  .gitignore  Dockerfile  README.md  migrate_pins.py  pyproject.toml  run.sh  seed_test_data.py  test_api.py  test_db.py
backend/app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py
backend/app/routers/: __init__.py  admin.py  areas.py  comments.py  general.py  pins.py  votes.py
backend/app/services/: area_service.py  comment_service.py  moderation_service.py  pin_service.py  vote_service.py
backend/tests/: test_api.py  test_vote_logic.py
backend/tests_integration/: conftest.py  test_abuse_prevention.py  test_area_overlap.py  test_endpoints.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: apiService.js
frontend/src/components/: IntroScreen.jsx
frontend/src/components/Map/: MapContainer.jsx
frontend/src/components/Map/Controls/: FilterMenu.css  FilterMenu.jsx  HelpModal.jsx  Toolbar.css  Toolbar.jsx
frontend/src/components/Map/Interactions/: AreaInteraction.jsx  PinInteraction.jsx
frontend/src/components/Search/: SearchBox.jsx
frontend/src/styles/: base.css  components.css  map.css  variables.css
frontend/src/utils/: categories.js  timeUtils.js
